--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.springframework.boot.gradle.plugin.ResolveMainClassName
+
 plugins {
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -37,4 +39,9 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+
+tasks.named('bootJar') {
+    launchScript()
 }
